dim/spec/test_input/invalid_input/modules/toplevel_invalid.dim
This file has no key which can be used for the top level
